--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
       width: 100%;
+      height: 100vh;
     }
     .video-wrapper {
       flex: 1;
@@ -29,13 +27,11 @@
       align-items: center;
       justify-content: center;
       background: #000;
-      border-radius: 8px;
-      overflow: hidden;
     }
     video {
-      max-width: 100%;
-      max-height: 80vh;
       width: 100%;
+      height: 100vh;
+      object-fit: contain;
     }
     .error {
       text-align: center;
@@ -61,11 +57,19 @@
     }
     @keyframes spin { to { transform: rotate(360deg); } }
     footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
       text-align: center;
-      padding: 16px;
+      padding: 8px;
       color: #444;
-      font-size: 0.8rem;
+      font-size: 0.7rem;
+      background: linear-gradient(transparent, rgba(0,0,0,0.8));
+      opacity: 0;
+      transition: opacity 0.2s;
     }
+    body:hover footer { opacity: 1; }
     footer a { color: #666; text-decoration: none; }
     footer a:hover { color: #888; }
   </style>
