--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       flex-direction: column;
       width: 100%;
       height: 100vh;
+      height: 100dvh;
+      padding-bottom: 50px;
+      box-sizing: border-box;
     }
     .video-wrapper {
       flex: 1;
@@ -30,7 +33,7 @@
     }
     video {
       width: 100%;
-      height: 100vh;
+      max-height: 100%;
       object-fit: contain;
     }
     .error {
